# agnes

./: .env.example  .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
app/models/: device.py  reading.py  user.py
app/requests/: category.py  device.py  location.py  reading.py  user.py
app/responses/: category.py  location.py  reading.py  user.py
app/services/: device.py  location.py  queue.py
backend/: .coveragerc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  requirements.txt
backend/agnes-api/: LICENSE.md  README.md
backend/agnes-api/app/requests/: category.py  device.py  location.py  (+2 more)
backend/agnes-api/config/: database.py
backend/agnes-api/tests/: conftest.py
backend/app/models/: base.py  category.py  location.py
backend/app/responses/: device.py
backend/app/services/: app.py
backend/config/: app.py
backend/handlers/: user.py
backend/public/: main.py
backend/routes/: health.py  locations.py  readings.py  users.py
backend/tests/unit/: test_queue_service.py  test_user_handler.py  test_user_model.py
config/: app.py
database/migrations/: env.py
database/migrations/versions/: a216b9e4b14c_create_loactions_table.py  be6c69c1a61a_create_users_table.py  bea95596b108_create_readings_table.py
database/seeders/: user_seeder.py
frontend/: package.json
public/: main.py
routes/: categories.py  devices.py
setup/: install.sh
tests/feature/: test_health_check_endpoint.py
tests/unit/: test_app_config.py  test_app_service.py  test_database_config.py
(+10 files in other folders)
